fix: gap usage has to be responsive

--- a/src/components/css/overlay.css
+++ b/src/components/css/overlay.css
@@ -70,7 +70,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 30px 0px;
+  gap: 3vh 0px;
   flex-direction: column;
   width: 100%;
 }
@@ -85,7 +85,7 @@
     color: white;
     background-color: #0c8323;
     text-align: center;
-    font-size: 1.5rem;
+    font-size: 1.4rem;
 
     border-radius: 20px;
     border: 6px solid white;
